tdf#115558 sw: export embedded XLSX in chart in footnote

Reference to the embedded XLSX was in substream that didn't
get propagated to the main document, and the embedded file
was missing from the reexported DOCX.

Change-Id: Ibb884d130b4a876a50b0156b3d08307352c0b03a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201284
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Tested-by: Jenkins
(cherry picked from commit eeffa8b835ed8c734c5ee30f9b380c9db927d6ab)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201433
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>