sw/source/writerfilter/ooxml/OOXMLDocumentImpl.cxx
@@ -294,6 +294,10 @@ void OOXMLDocumentImpl::resolveFootnote(Stream & rStream,
     }
 
     resolveFastSubStreamWithId(rStream, mpXFootnoteStream, nId);
+    OOXMLDocument* pSubStream = dynamic_cast<OOXMLDocument*>(mpXFootnoteStream.get());
+    if (pSubStream)
+        mxEmbeddingsList
+            = comphelper::combineSequences(mxEmbeddingsList, pSubStream->getEmbeddingsList());
 }
 
 void OOXMLDocumentImpl::resolveEndnote(Stream & rStream,
@@ -316,6 +320,10 @@ void OOXMLDocumentImpl::resolveEndnote(Stream & rStream,
     }
 
     resolveFastSubStreamWithId(rStream, mpXEndnoteStream, nId);
+    OOXMLDocument* pSubStream = dynamic_cast<OOXMLDocument*>(mpXEndnoteStream.get());
+    if (pSubStream)
+        mxEmbeddingsList
+            = comphelper::combineSequences(mxEmbeddingsList, pSubStream->getEmbeddingsList());
 }
 
 void OOXMLDocumentImpl::resolveCommentsExtendedStream(Stream& rStream)
@@ -804,9 +812,17 @@ void OOXMLDocumentImpl::resolveEmbeddingsStream(const OOXMLStream::Pointer_t& pS
                 // This will add all .xlsx and .bin to grabbag list.
                 if(bFound && mxEmbeddings.is())
                 {
-                    embeddingsTemp.Name = embeddingsTarget;
-                    embeddingsTemp.Value <<= mxEmbeddings;
-                    m_aEmbeddings.push_back(embeddingsTemp);
+                    // could attempt adding the same embedding via multiple footnotes
+                    bool bAlreadyExists
+                        = std::any_of(m_aEmbeddings.begin(), m_aEmbeddings.end(),
+                                      [](const beans::PropertyValue& rValue)
+                                      { return rValue.Name == embeddingsTarget; });
+                    if (!bAlreadyExists)
+                    {
+                        embeddingsTemp.Name = embeddingsTarget;
+                        embeddingsTemp.Value <<= mxEmbeddings;
+                        m_aEmbeddings.push_back(embeddingsTemp);
+                    }
                     mxEmbeddings.clear();
                 }
                 bFound = false;
